# 2_Smart_Content_Summarizer_with_Frontend

./: .gitignore  README.md
backend/: .env.example  .gitignore  pyproject.toml
backend/src/: app.py
backend/src/utils/: llm_utils.py
backend/tests/: test_api.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: SummarizerForm.tsx
frontend/lib/: api.ts
